syntax = "proto3";

package p2p.pb;

message ExtendedHeaderRequest {
  oneof data {
    uint64 origin = 1;
    bytes hash = 2;
  }
  uint64 amount = 3;
}

enum StatusCode {
  OK = 0;
  NOT_FOUND = 1;
  LIMIT_EXCEEDED = 2;
};

message ExtendedHeaderResponse {
  bytes body = 1;
  StatusCode statusCode = 2;
}
